--- a/consulta.html
+++ b/consulta.html
@@ -29,7 +29,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Cadastro</a>
             </li>
@@ -127,5 +127,7 @@
       </div>
     </div>
   </body>	
+
+  <script src="src/js/App.js"></script>
 
 </html>
