--- a/consulta.html
+++ b/consulta.html
@@ -16,7 +16,7 @@
 
 	</head>
 
-  <body>
+  <body onload="carregaListaDespesa()">
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
@@ -53,7 +53,7 @@
         <div class="col-md-2">
           <select class="form-control" id="ano">
             <option value="">Ano</option>
-            <option value="2018">2018</option>
+            <option value="2020">2020</option>
           </select>
         </div>
 
@@ -101,7 +101,7 @@
         </div>
 
         <div class="col-md-2 d-flex justify-content-end">
-          <button type="button" class="btn btn-primary">
+          <button type="button" class="btn btn-primary" onclick="">
             <i class="fas fa-search"></i>
           </button>
         </div>
@@ -109,7 +109,7 @@
 
       <div class="row">
         <div class="col">
-          <table class="table" >
+          <table class="table table-striped">
             <thead>
               <tr>
                 <th>Data</th>
@@ -120,7 +120,7 @@
               </tr>
             </thead>
 
-            <tbody>
+            <tbody id="tabela">
             </tbody>
           </table>
         </div>
