--- a/index.html
+++ b/index.html
@@ -108,6 +108,26 @@
     </div>
   </body>	
 
+  <!-- Modal -->
+  <div class="modal fade" id="modalRegistroDespesa" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div id="modalHeader">
+          <h5 class="modal-title" id="textModalTitle"> Sucesso! </h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" id="modalBody">
+          Dados enviados com sucesso
+        </div>
+        <div class="modal-footer">
+          <button type="button" data-dismiss="modal" id="botaoModal"> Continuar </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="src/js/App.js"></script>
 
 </html>
