--- a/consulta.html
+++ b/consulta.html
@@ -81,7 +81,7 @@
 
         <div class="col-md-6">
           <select class="form-control" id="tipo">
-            <option>Tipo</option>
+            <option value="">Tipo</option>
             <option value="1">Alimentação</option>
             <option value="2">Educação</option>
             <option value="3">Lazer</option>
@@ -101,7 +101,7 @@
         </div>
 
         <div class="col-md-2 d-flex justify-content-end">
-          <button type="button" class="btn btn-primary" onclick="">
+          <button type="button" class="btn btn-primary" onclick="pesquisarDespesa()">
             <i class="fas fa-search"></i>
           </button>
         </div>
@@ -126,8 +126,29 @@
         </div>
       </div>
     </div>
+
+    <div class="modal fade" id="modalError" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div id="modalHeader">
+            <h5 class="modal-title" id="textModalTitle"></h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body" id="modalBody">
+            
+          </div>
+          <div class="modal-footer">
+            <button type="button" data-dismiss="modal" id="botaoModal"></button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="src/js/App.js"></script>
   </body>	
 
-  <script src="src/js/App.js"></script>
+  
 
 </html>
