--- a/index.html
+++ b/index.html
@@ -113,16 +113,15 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div id="modalHeader">
-          <h5 class="modal-title" id="textModalTitle"> Sucesso! </h5>
+          <h5 class="modal-title" id="textModalTitle"></h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body" id="modalBody">
-          Dados enviados com sucesso
         </div>
         <div class="modal-footer">
-          <button type="button" data-dismiss="modal" id="botaoModal"> Continuar </button>
+          <button type="button" data-dismiss="modal" id="botaoModal"></button>
         </div>
       </div>
     </div>
